--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress": "npx cypress open",
+    "test": "jest",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -15,23 +20,33 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@cypress/react": "^5.12.1",
+    "@testing-library/react": "^12.1.2",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.5.1",
+    "cypress": "^9.4.1",
+    "enzyme": "^3.11.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lint-staged": "^12.3.3",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^3.0.19",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
