--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "cypress": "npx cypress open",
+    "cypress": "cypress open",
     "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
@@ -23,7 +23,9 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@cypress/react": "^5.12.1",
+    "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.4.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -32,7 +34,6 @@
     "autoprefixer": "^10.4.2",
     "babel-jest": "^27.5.1",
     "cypress": "^9.4.1",
-    "enzyme": "^3.11.0",
     "eslint": "^8.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -46,8 +47,11 @@
     "lint-staged": "^12.3.3",
     "postcss": "^8.4.6",
     "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.6",
     "react-test-renderer": "^17.0.2",
     "tailwindcss": "^3.0.19",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
