--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@mantine/core": "^4.2.4",
+    "@mantine/hooks": "^4.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -54,6 +56,6 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.9.9"
   }
 }
